<resources>
    <string name="app_name">ApplicationTracker</string>
    <string name="company_name">Company Name</string>
    <string name="job_title">Job Title</string>
    <string name="select_status_for_position">Select Status for position:</string>
    <string name="waiting">waiting</string>
    <string name="interviewing">Interviewing</string>
    <string name="offer">Offer</string>
    <string name="rejected">Rejected</string>
    <string name="notes">Notes</string>
    <string name="submit">Submit</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="welcome_message">Welcome to the Job Application Tracker</string>
    <string name="signup_instructions">Create an account:</string>
    <string name="password">password</string>
    <string name="signup">Sign Up</string>
    <string name="username">username</string>
    <string name="caption">All Applications. One place.</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
</resources>