<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".AddAppActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/etCompName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:hint="@string/company_name"
                android:inputType="text"
                android:minHeight="48dp"
                android:padding="8dp"
                tools:ignore="TextContrastCheck"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/etJobTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:hint="@string/job_title"
                android:inputType="text"
                android:minHeight="48dp"
                android:padding="8dp"
                android:importantForAutofill="no" />

            <RadioGroup
                android:id="@+id/rgstatus"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/tvStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_status_for_position" />

                <RadioButton
                    android:id="@+id/rbtnWaiting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/waiting" />

                <RadioButton
                    android:id="@+id/rbtnInterviewing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/interviewing" />

                <RadioButton
                    android:id="@+id/rbtnOffer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/offer" />

                <RadioButton
                    android:id="@+id/rbtnRejected"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rejected" />

            </RadioGroup>

            <EditText
                android:id="@+id/etNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:hint="@string/notes"
                android:inputType="textMultiLine"
                android:minHeight="48dp"
                android:padding="8dp"
                android:importantForAutofill="no" />

            <CalendarView
                android:id="@+id/cvDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit" />

        </LinearLayout>
</ScrollView>