<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme2Light"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp">

            <TextView
                android:id="@+id/companyName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@color/theme2Light"
                android:gravity="end"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textSize="38sp"
                android:textStyle="bold"
                tools:text="@string/company_name" />

            <TextView
                android:id="@+id/jobTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="27sp"
                tools:text="@string/job_title" />

            <TextView
                android:id="@+id/dateApplied"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-smallcaps"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="20sp"
                tools:text="DateApplied: 10/10/1" />

            <ImageView
                android:id="@+id/status"
                android:layout_width="32dp"
                android:layout_height="28dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="4dp"
                app:srcCompat="@drawable/red_circle" />

            <TextView
                android:id="@+id/tvNotes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/border"
                android:gravity="start"
                android:isScrollContainer="true"
                android:lineSpacingExtra="8sp"
                android:minLines="5"
                android:scrollbars="vertical"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/theme1Dark"
                android:textSize="16sp"
                tools:text="here is a long line of text to demonstrate how notes about this company would look like. \n Perks: they offer a lot. \n Cons: Lots of Stress." />
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="10">

        <Button
            android:id="@+id/btnDeleteApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:text="@string/delete" />

        <Button
            android:id="@+id/btnEditActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:text="@string/edit" />

    </RelativeLayout>

</LinearLayout>